<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_you_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/text_you_have"
        android:textColor="@color/colorText"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/text_amount"
        android:textColor="@color/colorAmount"
        android:textSize="54sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_you_have" />

    <Button
        android:id="@+id/button_deposit"
        android:layout_width="178dp"
        android:layout_height="65dp"
        android:layout_marginTop="132dp"
        android:text="@string/buttonText_deposit"
        android:textSize="18sp"
        android:onClick="depositMoney"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_amount" />

    <Button
        android:id="@+id/button_showTag"
        android:layout_width="178dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:text="@string/buttonText_show_tag"
        android:textSize="18sp"
        android:onClick="showTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_deposit" />

    <Button
        android:id="@+id/button_showToast"
        android:layout_width="178dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:onClick="showToast"
        android:text="@string/buttonText_show_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_showTag" />

    <TextView
        android:id="@+id/textView_rich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_amount" />


</androidx.constraintlayout.widget.ConstraintLayout>